- Fixed Boat Recipes Not Being Unlocked Through Standing In Water
- Fixed Pteranodon With "NoAI" Tag Not Having No AI
- Fixed Academies Sometimes Half-Generating
- Fixed Pregnant Animals Not Saving Pregnancy Time
- Fixed Animals In Prehistoric Dimension Not Spawning On Sand/Other Blocks
- Fixed Pteranodon Not Landing When Hitting Water
- Fixed Pteranodon Staying Still After Logging Off
- Added Updated Triceratops Model
- Added "Anu Totem" Stone Tablet
- Added Coat-Types; Data-Driven Cosmetics For Dinosaurs
- Added Gene Modification Table
- Added Data-Driven Models
- Added Data-Driven Animations
- Added Flowing Water To "#fossilslegacy:permafrost_freezable" Tag
- Added All Broken Javelins To "#fossilslegacy:repair_when_broken_in_archaeology_table" Tag
- Added All Swords To "#minecraft:swords" Tag
- Added All Pickaxes To "#minecraft:cluster_max_harvestables" Tag
- Added All Pickaxes To "#minecraft:pickaxes" Tag
- Added All Pickaxes To "#c:tools/mining_tool" Tag
- Added All Shovels To "#minecraft:shovels" Tag
- Added All Axes To "#minecraft:axes" Tag
- Added All Hoes To "#minecraft:hoes" Tag
- Added All Pickaxes, All Axes, All Shovels, And All Hoes To "#minecraft:enchantable/mining" Tag
- Added All Swords To "#minecraft:enchantable/fire_aspect" Tag
- Added All Swords To "#minecraft:enchantable/sword" Tag
- Added All Shovels and All Axes To "#minecraft:enchantable/sharp_weapon" Tag
- Added All Shovels and All Axes To "#minecraft:enchantable/weapon" Tag
- Added All Shovels and All Axes To "#c:tools/melee_weapon" Tag
- Added All Shovels and All Axes To "#minecraft:breaks_decorated_pots" Tag
- Added All Helmets To "#minecraft:head_armor" Tag
- Added All Helmets To "#minecraft:enchantable/head_armor" Tag
- Added All Chestplates To "#minecraft:chest_armor" Tag
- Added All Chestplates To "#minecraft:enchantable/chest_armor" Tag
- Added All Leggings To "#minecraft:leg_armor" Tag
- Added All Leggings To "#minecraft:enchantable/leg_armor" Tag