@@ -84,7 +84,7 @@
         "x": 0.0,
         "x_rot": 1.570796,
         "y": 23.0,
-        "z": 1.0,
+        "z": 0.0,
         "z_rot": -2.792527
       }
     },
@@ -128,8 +128,7 @@
         "x_rot": -1.570796,
         "y": 23.0,
         "y_rot": 3.141593,
-        "z": 0.0,
-        "z_rot": -3.002
+        "z": 0.0
       }
     },
     {
