@@ -79,8 +79,8 @@ public final class PteranodonModels {
         partDefinition.addOrReplaceChild("neck_1", CubeListBuilder.create().texOffs(8, 16).addBox(-1.0F, -7.0F, -1.0F, 2.0F, 4.0F, 2.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, 1.570796F, 0.0F, 0.0F));
         partDefinition.addOrReplaceChild("neck_2", CubeListBuilder.create().texOffs(0, 16).addBox(-1.0F, -11.0F, -1.0F, 2.0F, 4.0F, 2.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, 1.570796F, 0.0F, 0.0F));
         partDefinition.addOrReplaceChild("body", CubeListBuilder.create().texOffs(0, 0).addBox(-2.0F, -3.5F, -2.0F, 4.0F, 7.0F, 4.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, 1.570796F, 0.0F, 0.0F));
-        partDefinition.addOrReplaceChild("right_wing_1", CubeListBuilder.create().texOffs(16, 7).addBox(2.0F, -3.0F, -1.0F, 8.0F, 6.0F, 1.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 1.0F, 1.570796F, 0.0F, -2.792527F));
-        partDefinition.addOrReplaceChild("right_wing_2", CubeListBuilder.create().texOffs(46, 18).addBox(9.0F, -3.0F, -4.0F, 8.0F, 4.0F, 1.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, -1.570796F, 3.141593F, -3.002F));
+        partDefinition.addOrReplaceChild("right_wing_1", CubeListBuilder.create().texOffs(16, 7).addBox(2.0F, -3.0F, -1.0F, 8.0F, 6.0F, 1.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, 1.570796F, 0.0F, -2.792527F));
+        partDefinition.addOrReplaceChild("right_wing_2", CubeListBuilder.create().texOffs(46, 18).addBox(9.0F, -3.0F, -4.0F, 8.0F, 4.0F, 1.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, -1.570796F, 3.141593F, 0.0F));
         partDefinition.addOrReplaceChild("left_wing_1", CubeListBuilder.create().texOffs(16, 0).addBox(2.0F, -3.0F, 0.0F, 8.0F, 6.0F, 1.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, -1.570796F, 3.141593F, 2.792527F));
         partDefinition.addOrReplaceChild("left_wing_2", CubeListBuilder.create().texOffs(46, 23).addBox(9.0F, -3.0F, 3.0F, 8.0F, 4.0F, 1.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, 1.570796F, 0.0F, 0.0F));
         partDefinition.addOrReplaceChild("right_leg", CubeListBuilder.create().texOffs(40, 4).addBox(-2.0F, 3.0F, -2.0F, 1.0F, 3.0F, 1.0F), PartPose.offsetAndRotation(0.0F, 23.0F, 0.0F, 1.570796F, 0.0F, 0.0F));
